[tool.poetry]
name = "asimov"
version = "0.1.0"
description = "Simulating Asimovian Economics and Monetary Policy"
authors = ["Jonathan Clark <@ChrncPainRewird on X>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "asimov", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13"
mesa = ">=3.3.0,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
jupyter = ">=1.1.1,<2.0.0"
mesa-frames = { git = "https://github.com/projectmesa/mesa-frames.git" }
polars = ">=1.34.0,<2.0.0"
beartype = "^0.22.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
black = ">=25.9.0,<26.0.0"
flake8 = ">=7.3.0,<8.0.0"
codecov = "^2.1.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
data_file = "coverage-reports/.coverage"
branch = true  # Optional: Tracks if/else branches for better metrics

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-s -v"